completed uri docs and api definition
